--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "authors": [
         {
-            "name": "ofttryaj",
-            "email": "ofttryaj@gmail.com"
+            "name": "wlfg",
+            "email": "450181296@qq.com"
         }
     ],
     "require": {},
